# control-rs

./: Cargo.toml  LICENSE  README.md  clippy.txt  coding_standards.md  documentation_standards.md
.github/workflows/: CI.yml  rust.yml
documentation/: classical_controls_api.md  data_driven_controls.md
examples/: README.md  dc_motor.rs  dmdc.rs  polynomial.rs  quadcopter.rs  static_storage.rs
examples/dc_motor_lead_lag/: dc_motor_model.rs  lead_lag_compensator.rs  mod.rs
src/: assertf.rs  frequency_tools.rs  integrators.rs  lib.rs  polynomial.rs  state_space.rs  static_storage.rs
src/math/: assert_f.rs  complex_number.rs  linear_algebra.rs  mod.rs  num_traits.rs  system_traits.rs  systems.rs
src/matrix/: mod.rs
src/polynomial/: aliases.rs  arithmatic_tests.rs  array_polynomial.rs  basic_polynomial_tests.rs  basic_tests.rs  constant.rs  edge_case_test.rs  edge_case_tests.rs  fmt_tests.rs  line.rs  mod.rs  op_tests.rs  polynomial_arithmetic_tests.rs  polynomial_utility_tests.rs  sparse_polynomial.rs  tools.rs  utils.rs  vec_polynomial.rs
src/polynomial/tests/: arithmetic.rs  basic.rs  mod.rs  utilities.rs  utility.rs
src/state_space/: basic_ss_tests.rs  mod.rs  utils.rs
src/transfer_function/: basic_tf_tests.rs  edge_case_test.rs  edge_case_tests.rs  linear_tools.rs  mod.rs  tf_arithmatic_tests.rs  tf_edge_case_test.rs  tf_frequency_tests.rs  tf_scalar_arithmetic_tests.rs  utils.rs
src/transfer_function/tests/: arithmetic.rs  basic.rs  frequency_response.rs  mod.rs
src/vector/: mod.rs
tests/: basic_toolbox_tests.rs
