[package]
name = "control-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
nalgebra = { version = "0.33.0", features = ["serde-serialize", "libm"] }
num-traits = { version = "0.2", default-features = false, features = ["libm"]  }
plotly = { version = "0.12.1", optional = true }

[features]
default = []
std = ["plotly", "serde/std", "num-traits/std"]

[dev-dependencies]
csv = "1.3.0"
rand = "0.9.1"
rand_distr = "0.5.1"
