[package]
name = "control-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
nalgebra = { version = "0.33.0", features = ["libm"] }
num-traits = { version = "0.2", default-features = false, features = ["libm"]  }
plotly = { version = "0.12.1", optional = true }

[features]
default = []
std = ["plotly", "num-traits/std"]

[dev-dependencies]
csv = "1.3.0"
rand = "0.9.1"
rand_distr = "0.5.1"
